Fixed mobile view learn more button being clipped
Former-commit-id: df10576c7c1fb4adef95e12dba61fea1471f5c86

--- a/server/public/sass/main_index.scss
+++ b/server/public/sass/main_index.scss
@@ -10,7 +10,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  @include mobile {
+  @include mobile-456px {
     height: calc(100vh - 60px);
   }
   .container {
